# ai-synth

./: .gitignore  Makefile  README.md  jobscript.sh  model_train.out  pyproject.toml  requirements.txt  train_mod.sh  train_mod.sh~
.dvc/: config
docs/: mkdocs.yaml
mm_diffusion/: common.py  dist_util.py  multimodal_datasets.py  multimodal_script_util.py  multimodal_train_util.py  multimodal_unet.py
notebooks/: ai_synthv2_still_problems.ipynb  note_classification_training.ipynb  synth_data+train.ipynb  vid2music-asr.ipynb  vid2music.ipynb  video2midi-train-works-kaggle.ipynb  video2midi-train-works.ipynb  video2midi_train.py
src/: __init__.py  train_model.py  train_model_bk.py  train_model_vivit.py  txt
src/data/: data_loader.py  download_dataset.py  loader.ipynb  make_dataset.py  make_dataset_synthetic.py  make_img_dataset.py  split_data.py  utils.py
src/models/: model.py
